# TetraRL

./: .gitignore  LICENSE  README.md  progress.md  pyproject.toml
docs/: PROJECT_OVERVIEW.md  action-plan-weekly.md  architecture.md  c_morl_systems_analysis.md  dag_env_design.md  sustaingym_install_notes.md  tetrarl_native_design.md  week10_full_eval_orin.md  week1_status.md  week2_FINAL_status.md  week2_status.md  week4_features.md  week5_features.md  week6_framework_design.md  week7_concurrent_design.md  week7_ffmpeg_design.md  week7_nano_cartpole_results.md  week7_nano_port_design.md  week7_pareto_design.md  week7_ppo_lagrangian_design.md  week8_ablation_design.md  week8_ablation_orin_real_comparison.md  week8_eval_runner_design.md  week8_overhead_design.md  week9_multienv_design.md  week9_nano_deep_design.md
references/: README.md
reproduce/: README.md  run_full_paper.sh  run_short.sh  run_smoke.sh
runs/: p15_atari_nano_probe.md  w9_combined_cdf_per_omega.png.summary.md  w9_combined_cdf_with_nano.png.summary.md
scripts/: README.md  analyze_v6_v7.py  dag_env_smoke.py  eval_pd_morl_dst.py  p10_ablation_hv.py  p10_dst_multiseed_aggregate.py  p10_nano_dag_multiseed_aggregate.py  p11_aggregate.py  p12_aggregate.py  p12_multitenant_nano_grpo_orin.py  p15_aggregate_all.py  p15_aggregate_phase1.py  p15_aggregate_phase2.py  p15_aggregate_phase3.py  p15_generate_figures.py  p15_probe_atari_nano_memory.py  p15_run_phase1.sh  p15_run_phase2.sh  p15_run_phase3.sh  p15_run_phase4.sh  p15_unified_runner.py  p15_validate_coverage.py  parse_r3_metrics.py  plot_dst_pareto.py  plot_hv_convergence.py  profile_orin_dvfs.py  run_native_hopper.py  run_p11_headtohead.sh  run_p11_r3_native.sh  run_w10_nano_matrix.sh  (+34 more)
(+829 files in other folders)
