[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tetrarl"
version = "0.1.0a0"
description = "A Multi-Objective Runtime System for On-Device Reinforcement Learning Training"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "gymnasium>=1.0",
    "numpy",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.8",
    "ruff>=0.4",
    "matplotlib",
]

[tool.setuptools.packages.find]
include = ["tetrarl*"]

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = [
    "tetrarl/morl/c_morl",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
